--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+.container {
+  background-color: antiquewhite;
+  width: 500px;
+  margin: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+}
+.input-todo{
+  width: 400px;
+  height: 40px;
+  font-size: 28px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  height: 45px;
+  background-color: azure;
+  font-weight: 500;
+  border: none;
+  margin-bottom: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-todo {
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  flex-wrap: wrap;
+}
+
+.item-todo {
+  background-color: aliceblue;
+  height: 40px;
+  width: 100%;
+  font-size: 28px;
+  margin-bottom: 5px;
+
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.pointer {
+  cursor: pointer;
 }
